--- a/src/components/spinner/Spinner.styles.scss
+++ b/src/components/spinner/Spinner.styles.scss
@@ -9,7 +9,7 @@
   width: 48px;
   height: 48px;
   border: 5px solid #fff;
-  border-bottom-color: #ff3d00;
+  border-bottom-color: #4c96b0;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
