--- a/src/components/main/components/characteristics/Characteristics.styles.scss
+++ b/src/components/main/components/characteristics/Characteristics.styles.scss
@@ -2,6 +2,13 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
   padding-top: 31px;
 
+  &-title {
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin: 10px 0 25px;
+  }
+
   &-list {
     width: 100%;
 
@@ -12,6 +19,7 @@
       padding-bottom: 11px;
       position: relative;
       gap: 250px;
+      align-items: center;
 
       &:not(:first-child) {
         border-top: 1px solid #cbcbcb;
